| Summary: | ASTERISK-19549: Channel Hangup Handlers | ||
| Reporter: | Mark Murawski (kobaz) | Labels: | |
| Date Opened: | 2012-03-15 15:53:14 | Date Closed: | 2012-06-29 12:07:20 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Channels |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | This is the hangup handler patch, and associated helper function ast_pbx_exten_parse(), which I think is needed to separate the functionality of parsing a gosub target from actually going to the target. It's been malloc debugged and valgrind debugged and tested for several months in production environments. Overview of module: I find the 'h' extensions to be limited, cumbersome, and error prone when writing very complex dialplan, especially when using lots of gotos and gosubs. Say you have a main dialplan entry point context called callqueue. If at any point after callqueue runs, you want to run a hangup handler specific for the callqueue dialplan, you have to put an 'h' extension in every single context you plan to possibly jump to after entering callqueue. This solves that problem, and gives the added benefit of cascading hangup handlers. | ||
| Comments: | By: Richard Mudgett (rmudgett) 2012-06-22 20:23:36.347-0500 Posted new review that fully implements hangup handlers https://reviewboard.asterisk.org/r/2002/ | ||