Merged revisions 369489,369492-369493 via svnmerge from file:///srv/subversion/repos/asterisk/trunk

................
  r369489 | rmudgett | 2012-06-29 11:42:32 -0500 (Fri, 29 Jun 2012) | 8 lines
  
  Remove obsolete struct ast_channel note.
  
  The opaquing the ast_channel struct no longer requires .cleancount to be
  changed when the struct is changed.
  
  * Bump .cleancount value one last time because of struct ast_channel for
  old times sake.
................
  r369492 | file | 2012-06-29 11:56:29 -0500 (Fri, 29 Jun 2012) | 8 lines
  
  With some configurations a transport is not actually specified so assume UDP in these cases.
  ........
  
  Merged revisions 369490 from http://svn.asterisk.org/svn/asterisk/branches/1.8
  ........
  
  Merged revisions 369491 from http://svn.asterisk.org/svn/asterisk/branches/10
................
  r369493 | rmudgett | 2012-06-29 12:02:32 -0500 (Fri, 29 Jun 2012) | 16 lines
  
  Hangup handlers - Dialplan subroutines that run when the channel hangs up.
  
  Hangup handlers are an alternative to the h extension.  They can be used
  in addition to the h extension.  The idea is to attach a Gosub routine to
  a channel that will execute when the call hangs up.  Whereas which h
  extension gets executed depends on the location of dialplan execution when
  the call hangs up, hangup handlers are attached to the call channel.  You
  can attach multiple handlers that will execute in the order of most
  recently added first.
  
  (closes issue ASTERISK-19549)
  Reported by: Mark Murawski
  Tested by: rmudgett
  
  Review: https://reviewboard.asterisk.org/r/2002/
................


git-svn-id: https://origsvn.digium.com/svn/asterisk/team/rmudgett/ao2_enhancements@369505 65c4cc65-6c06-0410-ace0-fbb531ad65f3